crates/franken-node/tests/snapshots/fleet_cli_e2e__fleet_cli_json_output_matrix.snap
---
source: crates/franken-node/tests/fleet_cli_e2e.rs
expression: matrix
---
{
  "status_zone": {
    "schema_version": "franken-node/fleet-status-cli/v1",
    "transport": "file",
    "live_control_plane": false,
    "activated_source": "file_transport_not_live",
    "status": {
      "zone_id": "zone-golden-status",
      "active_quarantines": 1,
      "active_revocations": 0,
      "healthy_nodes": 1,
      "total_nodes": 2,
      "activated": false,
      "pending_convergences": [
        {
          "converged_nodes": 1,
          "total_nodes": 2,
          "progress_pct": 50,
          "eta_seconds": null,
          "phase": "TimedOut"
        }
      ]
    },
    "state_dir": "[fleet-state]",
    "convergence_timeout_seconds": 120,
    "stale_nodes": [
      {
        "zone_id": "zone-golden-status",
        "node_id": "node-golden-stale",
        "last_seen": "[last_seen]",
        "quarantine_version": 1,
        "health": "degraded"
      }
    ],
    "active_incidents": [
      {
        "incident_id": "inc-golden-status",
        "zone_id": "zone-golden-status",
        "target_id": "sha256:golden-status",
        "target_kind": "artifact",
        "reason": "golden status quarantine",
        "quarantine_version": 3,
        "emitted_at": "[emitted_at]",
        "convergence": {
          "converged_nodes": 1,
          "total_nodes": 2,
          "progress_pct": 50,
          "eta_seconds": null,
          "phase": "TimedOut"
        }
      }
    ],
    "state": {
      "schema_version": "franken-node/fleet-transport-state/v1",
      "actions": [
        {
          "action_id": "fleet-op-quarantine-golden-status",
          "emitted_at": "[emitted_at]",
          "action": {
            "kind": "quarantine",
            "zone_id": "zone-golden-status",
            "incident_id": "inc-golden-status",
            "target_id": "sha256:golden-status",
            "target_kind": "artifact",
            "reason": "golden status quarantine",
            "quarantine_version": 3
          }
        }
      ],
      "nodes": [
        {
          "zone_id": "zone-golden-status",
          "node_id": "node-golden-fresh",
          "last_seen": "[last_seen]",
          "quarantine_version": 3,
          "health": "healthy",
          "applied_actions": {
            "action_count": 1,
            "actions_sha256": "[actions-sha256]"
          }
        },
        {
          "zone_id": "zone-golden-status",
          "node_id": "node-golden-stale",
          "last_seen": "[last_seen]",
          "quarantine_version": 1,
          "health": "degraded"
        }
      ]
    }
  },
  "status_all": {
    "schema_version": "franken-node/fleet-status-cli/v1",
    "transport": "file",
    "live_control_plane": false,
    "activated_source": "file_transport_not_live",
    "status": {
      "zone_id": "all",
      "active_quarantines": 1,
      "active_revocations": 0,
      "healthy_nodes": 1,
      "total_nodes": 2,
      "activated": false,
      "pending_convergences": [
        {
          "converged_nodes": 1,
          "total_nodes": 2,
          "progress_pct": 50,
          "eta_seconds": null,
          "phase": "TimedOut"
        }
      ]
    },
    "state_dir": "[fleet-state]",
    "convergence_timeout_seconds": 120,
    "stale_nodes": [
      {
        "zone_id": "zone-golden-status",
        "node_id": "node-golden-stale",
        "last_seen": "[last_seen]",
        "quarantine_version": 1,
        "health": "degraded"
      }
    ],
    "active_incidents": [
      {
        "incident_id": "inc-golden-status",
        "zone_id": "zone-golden-status",
        "target_id": "sha256:golden-status",
        "target_kind": "artifact",
        "reason": "golden status quarantine",
        "quarantine_version": 3,
        "emitted_at": "[emitted_at]",
        "convergence": {
          "converged_nodes": 1,
          "total_nodes": 2,
          "progress_pct": 50,
          "eta_seconds": null,
          "phase": "TimedOut"
        }
      }
    ],
    "state": {
      "schema_version": "franken-node/fleet-transport-state/v1",
      "actions": [
        {
          "action_id": "fleet-op-quarantine-golden-status",
          "emitted_at": "[emitted_at]",
          "action": {
            "kind": "quarantine",
            "zone_id": "zone-golden-status",
            "incident_id": "inc-golden-status",
            "target_id": "sha256:golden-status",
            "target_kind": "artifact",
            "reason": "golden status quarantine",
            "quarantine_version": 3
          }
        }
      ],
      "nodes": [
        {
          "zone_id": "zone-golden-status",
          "node_id": "node-golden-fresh",
          "last_seen": "[last_seen]",
          "quarantine_version": 3,
          "health": "healthy",
          "applied_actions": {
            "action_count": 1,
            "actions_sha256": "[actions-sha256]"
          }
        },
        {
          "zone_id": "zone-golden-status",
          "node_id": "node-golden-stale",
          "last_seen": "[last_seen]",
          "quarantine_version": 1,
          "health": "degraded"
        }
      ]
    }
  },
  "reconcile": {
    "schema_version": "franken-node/fleet-action-cli/v1",
    "transport": "file",
    "live_control_plane": false,
    "activated_source": "file_transport_not_live",
    "action": {
      "operation_id": "[operation-id]",
      "action_type": "reconcile",
      "success": true,
      "receipt": {
        "operation_id": "[operation-id]",
        "receipt_id": "[receipt-id]",
        "issuer": "cli-fleet-operator",
        "issued_at": "[issued_at]",
        "zone_id": "all",
        "payload_hash": "[payload-hash]",
        "decision_payload": {
          "action_type": "reconcile",
          "scope": {
            "zone_id": "all"
          },
          "reason": "fleet reconcile",
          "event_code": "FLEET-005"
        },
        "signature": {
          "algorithm": "ed25519",
          "public_key_hex": "4508a07aa941707f3eb2db94c8897a80b2c1197476b6de213ac273df7d86c4ff",
          "key_id": "b66f46fbc05065e4",
          "key_source": "env",
          "signing_identity": "fleet-control-plane",
          "trust_scope": "fleet_decision",
          "signed_payload_sha256": "[signed-payload-sha256]",
          "signature_hex": "[signature-hex]"
        }
      },
      "convergence": null,
      "trace_id": "trace-cli-fleet-reconcile",
      "event_code": "FLEET-005"
    },
    "convergence_receipt": {
      "schema_version": "franken-node/fleet-convergence-receipt/v1",
      "operation_id": "[operation-id]",
      "event_code": "FLEET-005",
      "completed_at": "[completed_at]",
      "verdict": "converged",
      "elapsed_ms": 0,
      "poll_interval_ms": 100,
      "timeout_ms": 120000,
      "timed_out": false,
      "convergence": null,
      "signature": {
        "algorithm": "ed25519",
        "public_key_hex": "4508a07aa941707f3eb2db94c8897a80b2c1197476b6de213ac273df7d86c4ff",
        "key_id": "b66f46fbc05065e4",
        "key_source": "env",
        "signing_identity": "fleet-control-plane",
        "trust_scope": "fleet_convergence",
        "signed_payload_sha256": "[signed-payload-sha256]",
        "signature_hex": "[signature-hex]"
      }
    },
    "status": {
      "zone_id": "all",
      "active_quarantines": 0,
      "active_revocations": 0,
      "healthy_nodes": 0,
      "total_nodes": 0,
      "activated": false,
      "pending_convergences": []
    },
    "state_dir": "[fleet-state]",
    "convergence_timeout_seconds": 120,
    "stale_nodes": [],
    "active_incidents": [],
    "state": {
      "schema_version": "franken-node/fleet-transport-state/v1",
      "actions": [],
      "nodes": []
    }
  },
  "release": {
    "schema_version": "franken-node/fleet-action-cli/v1",
    "transport": "file",
    "live_control_plane": false,
    "activated_source": "file_transport_not_live",
    "action": {
      "operation_id": "[operation-id]",
      "action_type": "release",
      "success": true,
      "receipt": {
        "operation_id": "[operation-id]",
        "receipt_id": "[receipt-id]",
        "issuer": "cli-fleet-operator",
        "issued_at": "[issued_at]",
        "zone_id": "zone-golden-release",
        "payload_hash": "[payload-hash]",
        "decision_payload": {
          "action_type": "release",
          "incident_id": "inc-golden-release",
          "scope": {
            "zone_id": "zone-golden-release"
          },
          "reason": "manual release via fleet CLI",
          "event_code": "FLEET-004"
        },
        "signature": {
          "algorithm": "ed25519",
          "public_key_hex": "fa4834147f6e690c3693eff61336046403cd8ae2a14f31b3c407358569239565",
          "key_id": "e9db4a16d0de9513",
          "key_source": "env",
          "signing_identity": "fleet-control-plane",
          "trust_scope": "fleet_decision",
          "signed_payload_sha256": "[signed-payload-sha256]",
          "signature_hex": "[signature-hex]"
        }
      },
      "convergence": {
        "converged_nodes": 1,
        "total_nodes": 1,
        "progress_pct": 100,
        "eta_seconds": 0,
        "phase": "Converged"
      },
      "trace_id": "trace-cli-fleet-release",
      "event_code": "FLEET-004"
    },
    "convergence_receipt": {
      "schema_version": "franken-node/fleet-convergence-receipt/v1",
      "operation_id": "[operation-id]",
      "event_code": "FLEET-004",
      "completed_at": "[completed_at]",
      "verdict": "converged",
      "elapsed_ms": 0,
      "poll_interval_ms": 100,
      "timeout_ms": 120000,
      "timed_out": false,
      "convergence": {
        "converged_nodes": 1,
        "total_nodes": 1,
        "progress_pct": 100,
        "eta_seconds": 0,
        "phase": "Converged"
      },
      "signature": {
        "algorithm": "ed25519",
        "public_key_hex": "fa4834147f6e690c3693eff61336046403cd8ae2a14f31b3c407358569239565",
        "key_id": "e9db4a16d0de9513",
        "key_source": "env",
        "signing_identity": "fleet-control-plane",
        "trust_scope": "fleet_convergence",
        "signed_payload_sha256": "[signed-payload-sha256]",
        "signature_hex": "[signature-hex]"
      }
    },
    "status": {
      "zone_id": "zone-golden-release",
      "active_quarantines": 0,
      "active_revocations": 0,
      "healthy_nodes": 1,
      "total_nodes": 1,
      "activated": false,
      "pending_convergences": [
        {
          "converged_nodes": 1,
          "total_nodes": 1,
          "progress_pct": 100,
          "eta_seconds": 0,
          "phase": "Converged"
        }
      ]
    },
    "state_dir": "[fleet-state]",
    "convergence_timeout_seconds": 120,
    "stale_nodes": [],
    "active_incidents": [],
    "state": {
      "schema_version": "franken-node/fleet-transport-state/v1",
      "actions": [
        {
          "action_id": "fleet-op-inc-golden-release",
          "emitted_at": "[emitted_at]",
          "action": {
            "kind": "quarantine",
            "zone_id": "zone-golden-release",
            "incident_id": "inc-golden-release",
            "target_id": "npm:@acme/auth-guard",
            "target_kind": "extension",
            "reason": "e2e contract quarantine",
            "quarantine_version": 5
          }
        },
        {
          "action_id": "[action-id]",
          "emitted_at": "[emitted_at]",
          "action": {
            "kind": "release",
            "zone_id": "zone-golden-release",
            "incident_id": "inc-golden-release",
            "reason": "manual release via fleet CLI"
          }
        }
      ],
      "nodes": [
        {
          "zone_id": "zone-golden-release",
          "node_id": "release-agent",
          "last_seen": "[last_seen]",
          "quarantine_version": 5,
          "health": "healthy",
          "applied_actions": {
            "action_count": 2,
            "actions_sha256": "[actions-sha256]"
          }
        }
      ]
    }
  },
  "reconcile_timeout": {
    "ok": false,
    "reason": "convergence_timed_out"
  },
  "agent_once": [
    {
      "schema_version": "franken-node/fleet-agent-cli/v1",
      "transport": "file",
      "live_control_plane": false,
      "cycle": 1,
      "node_id": "agent-golden-once",
      "zone_id": "zone-golden-agent",
      "configured_poll_interval_secs": 30,
      "actions_processed": 0,
      "last_action_id": null,
      "node_health": "healthy",
      "quarantine_version": 0,
      "poll_timestamp": "[poll_timestamp]"
    }
  ],
  "trust_card_export": {
    "active_quarantine": false,
    "audit_history": [
      {
        "detail": "trust card created",
        "event_code": "TRUST_CARD_CREATED",
        "timestamp": "1970-01-01T00:16:40Z",
        "trace_id": "trace-fixture-registry"
      }
    ],
    "behavioral_profile": {
      "filesystem_access": false,
      "network_access": true,
      "profile_summary": "Network-only auth checks with bounded side effects",
      "subprocess_access": false
    },
    "capability_declarations": [
      {
        "description": "Invalidate compromised sessions",
        "name": "auth.revoke-session",
        "risk": "high"
      },
      {
        "description": "Validate JWT and attach identity context",
        "name": "auth.validate-token",
        "risk": "medium"
      }
    ],
    "card_hash": "78e4f8d8be41fc3f620cc0e3b4eb05968bf811e77a3448de17bb44db322255da",
    "certification_level": "gold",
    "dependency_trust_summary": [
      {
        "dependency_id": "npm:jsonwebtoken@9",
        "trust_level": "verified"
      }
    ],
    "derivation_evidence": {
      "derivation_chain_hash": "sha256:8fe30e7b1b53d1b7c21c4f23b8eee4830532588b286841cc75cabac3cc0a43ac",
      "derived_at_epoch": 1000,
      "evidence_refs": [
        {
          "evidence_id": "ev-fixture-prov-001",
          "evidence_type": "provenance_chain",
          "verification_receipt_hash": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
          "verified_at_epoch": 1000
        },
        {
          "evidence_id": "ev-fixture-rep-001",
          "evidence_type": "reputation_signal",
          "verification_receipt_hash": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
          "verified_at_epoch": 1000
        }
      ]
    },
    "extension": {
      "extension_id": "npm:@acme/auth-guard",
      "version": "1.4.2"
    },
    "last_verified_timestamp": "2026-02-20T12:00:00Z",
    "previous_version_hash": null,
    "provenance_summary": {
      "artifact_hashes": [
        "sha256:deadbeefaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
      ],
      "attestation_level": "slsa-l3",
      "source_uri": "fixture://trust-card/acme/auth-guard",
      "verified_at": "2026-02-20T12:00:00Z"
    },
    "publisher": {
      "display_name": "Acme Security",
      "publisher_id": "pub-acme"
    },
    "registry_signature": "7bd249b809d2fee0dcdf33844a69945576e5bc04bf41a6fd8dd001f3ea26c37d",
    "reputation_score_basis_points": 920,
    "reputation_trend": "improving",
    "revocation_status": {
      "status": "active"
    },
    "schema_version": "1.0.0",
    "trust_card_version": 1,
    "user_facing_risk_assessment": {
      "level": "low",
      "summary": "Token validation extension with strong provenance and no local disk access"
    }
  },
  "trust_card_show_verified": {
    "active_quarantine": false,
    "audit_history": [
      {
        "detail": "trust card created",
        "event_code": "TRUST_CARD_CREATED",
        "timestamp": "1970-01-01T00:16:40Z",
        "trace_id": "trace-fixture-registry"
      }
    ],
    "behavioral_profile": {
      "filesystem_access": false,
      "network_access": true,
      "profile_summary": "Network-only auth checks with bounded side effects",
      "subprocess_access": false
    },
    "capability_declarations": [
      {
        "description": "Invalidate compromised sessions",
        "name": "auth.revoke-session",
        "risk": "high"
      },
      {
        "description": "Validate JWT and attach identity context",
        "name": "auth.validate-token",
        "risk": "medium"
      }
    ],
    "card_hash": "78e4f8d8be41fc3f620cc0e3b4eb05968bf811e77a3448de17bb44db322255da",
    "certification_level": "gold",
    "dependency_trust_summary": [
      {
        "dependency_id": "npm:jsonwebtoken@9",
        "trust_level": "verified"
      }
    ],
    "derivation_evidence": {
      "derivation_chain_hash": "sha256:8fe30e7b1b53d1b7c21c4f23b8eee4830532588b286841cc75cabac3cc0a43ac",
      "derived_at_epoch": 1000,
      "evidence_refs": [
        {
          "evidence_id": "ev-fixture-prov-001",
          "evidence_type": "provenance_chain",
          "verification_receipt_hash": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
          "verified_at_epoch": 1000
        },
        {
          "evidence_id": "ev-fixture-rep-001",
          "evidence_type": "reputation_signal",
          "verification_receipt_hash": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
          "verified_at_epoch": 1000
        }
      ]
    },
    "extension": {
      "extension_id": "npm:@acme/auth-guard",
      "version": "1.4.2"
    },
    "last_verified_timestamp": "2026-02-20T12:00:00Z",
    "previous_version_hash": null,
    "provenance_summary": {
      "artifact_hashes": [
        "sha256:deadbeefaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
      ],
      "attestation_level": "slsa-l3",
      "source_uri": "fixture://trust-card/acme/auth-guard",
      "verified_at": "2026-02-20T12:00:00Z"
    },
    "publisher": {
      "display_name": "Acme Security",
      "publisher_id": "pub-acme"
    },
    "registry_signature": "7bd249b809d2fee0dcdf33844a69945576e5bc04bf41a6fd8dd001f3ea26c37d",
    "reputation_score_basis_points": 920,
    "reputation_trend": "improving",
    "revocation_status": {
      "status": "active"
    },
    "schema_version": "1.0.0",
    "trust_card_version": 1,
    "user_facing_risk_assessment": {
      "level": "low",
      "summary": "Token validation extension with strong provenance and no local disk access"
    }
  },
  "remotecap_verify": {
    "schema_version": "franken-node/remotecap-verify-cli/v1",
    "command": "remotecap.verify",
    "valid": true,
    "authorized": true,
    "token_id": "[token-id]",
    "operation": "network_egress",
    "endpoint": "https://api.example.com/v1/status",
    "audit_event": {
      "event_code": "REMOTECAP_RECHECK_PASSED",
      "legacy_event_code": "RC_RECHECK_PASSED",
      "token_id": "[token-id]",
      "issuer_identity": "operator-cli",
      "operation": "network_egress",
      "endpoint": "https://api.example.com/v1/status",
      "trace_id": "trace-golden-remotecap-verify",
      "timestamp_epoch_secs": 0,
      "allowed": true,
      "denial_code": null
    }
  }
}
