crates/franken-node/tests/snapshots/fleet_cli_e2e__fleet_release_human.snap
---
source: crates/franken-node/tests/fleet_cli_e2e.rs
expression: canonicalize_fleet_human_snapshot(&stdout)
---
fleet action: type=release operation_id=[operation-id]
  success=true
  event_code=FLEET-004
  receipt_id=[receipt-id] issuer=cli-fleet-operator zone=zone-release-human
  convergence=1/1 (100%) phase=Converged eta_seconds=Some(0)
  transport=file live_control_plane=false activated_source=file_transport_not_live
  convergence_receipt_elapsed_ms=[elapsed-ms] timed_out=false
